# vest

./: .gitignore  README.md
.github/workflows/: main.yml
hardware/board_ais/kicad/: LIB_CMX7032Q1.bak  LIB_CMX7032Q1.kicad_sym  README.md  ais.csv  board_ais.kicad_pcb  board_ais.kicad_prl  board_ais.kicad_pro  board_ais.kicad_sch  fp-lib-table  freerouting.dsn  sym-lib-table
hardware/board_ais/kicad/extra_components/BMP581/: BMP581.kicad_sym  BMP581.mod
hardware/board_ais/kicad/extra_components/BQ25172DSGR/: BQ25172DSGR.kicad_sym  BQ25172DSGR.lib  BQ25172DSGR.mod  SON50P200X200X80-9N.kicad_mod
hardware/board_ais/kicad/extra_components/FSM100/: FSM100.bak  FSM100.kicad_sym  FSM100.lib
hardware/board_ais/kicad/nasze.pretty/: nasz_zajebisty_led.kicad_mod
hardware/board_nrf/altium/: Job1.OutJob  PCB1.PcbDoc  Sheet1-altium-import.kicad_sym  Sheet1.SchDoc  kamizelka_sens.PrjPcb
hardware/board_nrf/altium/footprints/BQ25172DSGR/: BQ25172DSGR.epw  (+2 more)
hardware/board_nrf/kicad/: README.md
hardware/board_nrf/kicad/archive/: board_nrf.kicad_prl  board_nrf.kicad_sch  fp-lib-table  sym-lib-table  temp-freerouting.dsn  ~board_nrf.kicad_sch.lck
src/: Makefile  paagh_vest.ioc
src/App/Inc/: AHT20.h  MAX30102.h  NEO6.h  nRF24.h  pv_app.h  pv_defines.h  pv_pm.h  pv_pulse.h  pv_sensors.h
src/App/Src/: AHT20.c  MAX30102.c  NEO6.c  nRF24.c  pv_app.c  pv_pm.c  pv_pulse.c  pv_sensors.c
src/Core/Inc/: main.h  stm32l0xx_it.h
src/Core/Src/: adc.c  gpio.c  i2c.c  main.c  stm32l0xx_it.c  tim.c  usart.c
src/templates/: CMakeLists.txt  main.c  pv_app.c  pv_app.h  pv_pm.c  pv_pm.h
(+48 files in other folders)
